added recording function

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/duckie.png" />
     <link rel="manifest" href="%PUBLIC_URL%/duckie.png" />
     <title>Senior Dev Duckie</title>
+    <script src="/__/firebase/8.2.9/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
